--- a/samples/dynamic-spel-sample/src/main/resources/application.yml
+++ b/samples/dynamic-spel-sample/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
           password: ""
           url: jdbc:h2:mem:test
           driver-class-name: org.h2.Driver
+          schema: db/schema.sql
         tenant1_1:
           username: sa
           password: ""
