--- a/samples/load-datasource-from-jdbc/pom.xml
+++ b/samples/load-datasource-from-jdbc/pom.xml
@@ -3,13 +3,11 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>samples</artifactId>
     <groupId>com.baomidou</groupId>
+    <artifactId>dynamic-datsource-samples</artifactId>
     <version>1.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>load-datasource-from-jdbc</artifactId>
-
-
 </project>
