feat: 继续优化创建数据源过程

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
       <version>3.8.7</version>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>io.seata</groupId>
+      <artifactId>seata-all</artifactId>
+      <version>1.0.0</version>
+      <optional>true</optional>
+    </dependency>
+
   </dependencies>
 
   <build>
