feat: 分布式事务seata文档和案例编写完毕

--- a/samples/dynamic-seata-sample/pom.xml
+++ b/samples/dynamic-seata-sample/pom.xml
@@ -17,6 +17,21 @@
       <version>3.3.0</version>
     </dependency>
     <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid-spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-alibaba-seata</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>io.seata</groupId>
+          <artifactId>seata-all</artifactId>
+        </exclusion>
+      </exclusions>
+      <version>2.1.1.RELEASE</version>
+    </dependency>
+    <dependency>
       <groupId>io.seata</groupId>
       <artifactId>seata-all</artifactId>
       <version>1.0.0</version>
