--- a/samples/dynamic-seata-sample/src/main/resources/application.yml
+++ b/samples/dynamic-seata-sample/src/main/resources/application.yml
@@ -1,27 +1,32 @@
 spring:
+  application:
+    name: dynamic
   datasource:
     dynamic:
       primary: order
       strict: true
+      seata: true
       datasource:
         order:
           username: root
           password: 123456
           url: jdbc:mysql://localhost:3306/seata_order?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
           driver-class-name: com.mysql.cj.jdbc.Driver
-          schema: db/schema-order.sql
+          schema: classpath:db/schema-order.sql
         account:
           username: root
           password: 123456
           url: jdbc:mysql://localhost:3306/seata_account?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
           driver-class-name: com.mysql.cj.jdbc.Driver
-          schema: db/schema-accountr.sql
+          schema: classpath:db/schema-account.sql
         product:
           username: root
           password: 123456
           url: jdbc:mysql://localhost:3306/seata_product?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
           driver-class-name: com.mysql.cj.jdbc.Driver
-          schema: db/schema-product.sql
-logging:
-  level:
-    com.baomidou: debug
+          schema: classpath:db/schema-product.sql
+
+  cloud:
+    alibaba:
+      seata:
+        tx-service-group: my_test_tx_group
