--- a/samples/dynamic-add-remove-datasource/src/main/resources/application.yml
+++ b/samples/dynamic-add-remove-datasource/src/main/resources/application.yml
@@ -10,17 +10,17 @@ spring:
         slave_1:
           username: sa
           password: ""
-          url: jdbc:h2:mem:test
+          url: jdbc:h2:mem:test1
           driver-class-name: org.h2.Driver
         slave_2:
           username: sa
           password: ""
-          url: jdbc:h2:mem:test
+          url: jdbc:h2:mem:test2
           driver-class-name: org.h2.Driver
         slave_3:
           username: sa
           password: ""
-          url: jdbc:h2:mem:test
+          url: jdbc:h2:mem:test3
           driver-class-name: org.h2.Driver
 logging:
   level:
