增加shardingjdbc测试用例 (#257)
Co-authored-by: 刘尚 <liushang@zsyjr.com>

--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -33,6 +33,7 @@
         <module>nest-sample</module>
         <module>quartz-sample</module>
         <module>seata-sample</module>
+        <module>sharding-jdbc-sample</module>
         <module>spel-sample</module>
     </modules>
 
