--- a/samples/druid-sample/src/main/resources/application.yml
+++ b/samples/druid-sample/src/main/resources/application.yml
@@ -5,45 +5,43 @@ spring:
         enabled: true
     dynamic:
       p6spy: false
-      druid:
+      druid: #以下是全局默认值，可以全局更改
         filters: stat
         validation-query: 'select 1'
-      #      druid: #以下是全局默认值，可以全局更改
-      #        initial-size:
-      #        max-active:
-      #        min-idle:
-      #        max-wait:
-      #        time-between-eviction-runs-millis:
-      #        time-between-log-stats-millis:
-      #        stat-sqlmax-size:
-      #        min-evictable-idle-time-millis:
-      #        max-evictable-idle-time-millis:
-      #        test-while-idle:
-      #        test-on-borrow:
-      #        test-on-return:
-      #        validation-query:
-      #        validation-query-timeout:
-      #        use-global-datasource-stat:
-      #        async-init:
-      #        clear-filters-enable:
-      #        reset-stat-enable:
-      #        not-full-timeout-retry-count:
-      #        max-wait-thread-count:
-      #        fail-fast:
-      #        phyTimeout-millis:
-      #        keep-alive:
-      #        pool-prepared-statements:
-      #        init-variants:
-      #        init-global-variants:
-      #        use-unfair-lock:
-      #        kill-when-socket-read-timeout:
-      #        connection-properties:
-      #        max-pool-prepared-statement-per-connection-size:
-      #        init-connection-sqls:
-      #        share-prepared-statements:
-      #        connection-errorretry-attempts:
-      #        break-after-acquire-failure:
-      #        filters: stat,wall # 注意这个值和druid原生不一致，默认启动了stat,wall
+      # initial-size:
+      # max-active:
+      # min-idle:
+      # max-wait: 1000
+      # time-between-eviction-runs-millis:
+      # time-between-log-stats-millis:
+      # stat-sqlmax-size:
+      # min-evictable-idle-time-millis:
+      # max-evictable-idle-time-millis:
+      # test-while-idle:
+      # test-on-borrow:
+      # test-on-return:
+      # validation-query-timeout:
+      # use-global-datasource-stat:
+      # async-init:
+      # clear-filters-enable:
+      # reset-stat-enable:
+      # not-full-timeout-retry-count:
+      # max-wait-thread-count:
+      # fail-fast:
+      # phyTimeout-millis:
+      # keep-alive:
+      # pool-prepared-statements:
+      # init-variants:
+      # init-global-variants:
+      # use-unfair-lock:
+      # kill-when-socket-read-timeout:
+      # connection-properties:
+      # max-pool-prepared-statement-per-connection-size:
+      # init-connection-sqls:
+      # share-prepared-statements:
+      # connection-errorretry-attempts:
+      # break-after-acquire-failure:
+      # filters: stat,wall # 注意这个值和druid原生不一致，默认启动了stat,wall
       datasource:
         master:
           username: sa
