--- a/samples/druid-sample/src/main/resources/application.yml
+++ b/samples/druid-sample/src/main/resources/application.yml
@@ -5,43 +5,49 @@ spring:
         enabled: true
     dynamic:
       p6spy: false
-      druid: #以下是全局默认值，可以全局更改
-        filters: stat
+      # 配置Druid全局默认值
+      druid:
+        initial-size: 5
+        max-active: 8
+        min-idle: 3
+        max-wait: 1000
         validation-query: 'select 1'
-      # initial-size:
-      # max-active:
-      # min-idle:
-      # max-wait: 1000
-      # time-between-eviction-runs-millis:
-      # time-between-log-stats-millis:
-      # stat-sqlmax-size:
-      # min-evictable-idle-time-millis:
-      # max-evictable-idle-time-millis:
-      # test-while-idle:
-      # test-on-borrow:
-      # test-on-return:
-      # validation-query-timeout:
-      # use-global-datasource-stat:
-      # async-init:
-      # clear-filters-enable:
-      # reset-stat-enable:
-      # not-full-timeout-retry-count:
-      # max-wait-thread-count:
-      # fail-fast:
-      # phyTimeout-millis:
-      # keep-alive:
-      # pool-prepared-statements:
-      # init-variants:
-      # init-global-variants:
-      # use-unfair-lock:
-      # kill-when-socket-read-timeout:
-      # connection-properties:
-      # max-pool-prepared-statement-per-connection-size:
-      # init-connection-sqls:
-      # share-prepared-statements:
-      # connection-errorretry-attempts:
-      # break-after-acquire-failure:
-      # filters: stat,wall # 注意这个值和druid原生不一致，默认启动了stat,wall
+       # 以下是全局默认值，可以全局更改
+#        initial-size:
+#        max-active:
+#        min-idle:
+#        max-wait: 1000
+#        validation-query: 'select 1'
+#        time-between-eviction-runs-millis:
+#        time-between-log-stats-millis:
+#        stat-sqlmax-size:
+#        min-evictable-idle-time-millis:
+#        max-evictable-idle-time-millis:
+#        test-while-idle:
+#        test-on-borrow:
+#        test-on-return:
+#        validation-query-timeout:
+#        use-global-datasource-stat:
+#        async-init:
+#        clear-filters-enable:
+#        reset-stat-enable:
+#        not-full-timeout-retry-count:
+#        max-wait-thread-count:
+#        fail-fast:
+#        phyTimeout-millis:
+#        keep-alive:
+#        pool-prepared-statements:
+#        init-variants:
+#        init-global-variants:
+#        use-unfair-lock:
+#        kill-when-socket-read-timeout:
+#        connection-properties:
+#        max-pool-prepared-statement-per-connection-size:
+#        init-connection-sqls:
+#        share-prepared-statements:
+#        connection-errorretry-attempts:
+#        break-after-acquire-failure:
+#        filters: stat,wall # 注意这个值和druid原生不一致，默认启动了stat,wall
       datasource:
         master:
           username: sa
@@ -66,9 +72,6 @@ spring:
           password: "123456"
           url: jdbc:h2:mem:test
           driver-class-name: org.h2.Driver
-#      druid:
-#        wall:
-#          multi-statement-allow: true
 logging:
   level:
     com.baomidou: debug
