--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: [huayanyu]
+github: [huayanYu]
 custom: ['https://dynamic-datasource.com/guide/donate/']
