--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
-      uses: actions/setup-java@v1。4.3
+      uses: actions/setup-java@v1.4.3
       with:
         java-version: 1.8
     - name: Build with Maven
