--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <organization>
         <name>baomidou</name>
-        <url>https://gitee.com/baomidou</url>
+        <url>https://github.com/baomidou</url>
     </organization>
 
     <developers>
