feat:增加适配atomikos数据源,支持同一个事务下多次切换数据源 (#481)
* feat:增加适配atomikos数据源,支持同一个事务下多次切换数据源

---------

Co-authored-by: jiazhifeng <wb.jiazhifeng01@mesg.corp.netease.com>

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -50,6 +50,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jta-atomikos</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.github.chris2018998</groupId>
             <artifactId>beecp</artifactId>
             <optional>true</optional>
