--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <mybatis.plus.version>3.5.2</mybatis.plus.version>
         <hikaricp.version>2.4.13</hikaricp.version>
         <druid.version>1.2.14</druid.version>
+        <atomikos.version>2.6.9</atomikos.version>
         <beeCp.version>3.2.9</beeCp.version>
         <commons-dbcp2.version>2.8.0</commons-dbcp2.version>
         <p6spy.version>3.9.1</p6spy.version>
@@ -113,6 +114,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jta-atomikos</artifactId>
+                <version>${atomikos.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.chris2018998</groupId>
