--- a/dynamic-datasource-spring-boot-starter/pom.xml
+++ b/dynamic-datasource-spring-boot-starter/pom.xml
@@ -5,49 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.baomidou</groupId>
-        <artifactId>dynamic-datasource-spring-boot-starter-parent</artifactId>
+        <artifactId>dynamic-datasource</artifactId>
         <version>4.0.0</version>
     </parent>
 
-    <groupId>com.kll.deploy</groupId>
     <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>dynamic-datasource-spring</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP-java7</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.github.chris2018998</groupId>
-            <artifactId>beecp</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-dbcp2</artifactId>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-            <optional>true</optional>
+            <artifactId>dynamic-datasource-spring-boot-common</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
